cargo-features = ["strip"]


[package]
name = "simpletimer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
log = "0.4.20"
crossterm = "0.27.0"
anyhow = "1.0.75"
signal-hook = "0.3.17"

[profile.release]
opt-level = "z"
strip = true
lto = true